--- a/Timer App/src/app.css
+++ b/Timer App/src/app.css
@@ -12,6 +12,13 @@
    margin: 10px;
    margin-top: 20px;
    border-radius: 7px;
+   position: relative;
+}
+
+.cross{
+   position: absolute;
+   top: 6px;
+   right: 6px;
 }
 
 .btn-container {
@@ -35,6 +42,7 @@ button {
 
 input {
    padding: 4px;
+   margin-right: 10px;
    padding-top: 8px;
    outline: none;
    font-size: 17px;
